Scrollbar fixed

--- a/public/css/partials/_chat.scss
+++ b/public/css/partials/_chat.scss
@@ -1,6 +1,10 @@
+body {
+  padding-bottom: 70px;
+}
+
 #input {
   width: 100%;
-  position: absolute;
+  position: fixed;
   bottom: 0;
 
   padding: 20px 30px;
